Refd #780 - Fixed issue with linebreak in headings

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -260,8 +260,8 @@ div.animation[started="true"]
 
 @media(min-width: 768px)
 {
-  h1 span,
-  h2 span
+  h1.linebreak span,
+  h2.linebreak span
   {
     display: block;
   }
